[251028] 잡지도서 이미지 제외 비교

--- a/crop_analysis/crop_analysis.ipynb
+++ b/crop_analysis/crop_analysis.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
       "5   SS0147        16  tb_0008_0001.png, tb_0010_0001.png, tb_0012_00...   \n",
       "6   SS0139         7  tb_0020_0001.png, tb_0029_0001.png, tb_0030_00...   \n",
       "7   SS0073        20  tb_0012_0001.png, tb_0016_0001.png, tb_0043_00...   \n",
-      "8   SS0074        27  tb_0025_0001.png, tb_0053_0001.png, tb_0063_00...   \n",
+      "8   SS0074        26  tb_0053_0001.png, tb_0063_0001.png, tb_0074_00...   \n",
       "9   SS0089        29  tb_0019_0001.png, tb_0020_0001.png, tb_0033_00...   \n",
       "10  SS0088        68  tb_0018_0001.png, tb_0024_0001.png, tb_0054_00...   \n",
       "11  SS0086        49  tb_0026_0001.png, tb_0030_0001.png, tb_0031_00...   \n",
@@ -130,58 +130,58 @@
       "24  SS0076        34  tb_0016_0001.png, tb_0020_0001.png, tb_0037_00...   \n",
       "\n",
       "    이미지_파일_수                                          이미지_파일_목록  파일이_있는_페이지_수  \\\n",
-      "0        216  img_0009_0001.png, img_0011_0001.png, img_0012...           130   \n",
-      "1        175  img_0010_0001.png, img_0012_0001.png, img_0013...           102   \n",
-      "2        255  img_0007_0001.png, img_0008_0001.png, img_0009...           166   \n",
-      "3         37  img_0003_0001.png, img_0004_0001.png, img_0005...            45   \n",
-      "4        225  img_0007_0001.png, img_0008_0001.png, img_0009...           138   \n",
-      "5         26  img_0003_0001.png, img_0004_0001.png, img_0005...            39   \n",
-      "6         93  img_0005_0001.png, img_0006_0001.png, img_0006...            65   \n",
-      "7        192  img_0011_0001.png, img_0013_0001.png, img_0013...           129   \n",
-      "8        293  img_0009_0001.png, img_0009_0002.png, img_0010...           164   \n",
-      "9        231  img_0007_0001.png, img_0008_0001.png, img_0009...           143   \n",
-      "10       260  img_0007_0001.png, img_0008_0001.png, img_0009...           171   \n",
-      "11       361  img_0007_0001.png, img_0008_0001.png, img_0009...           167   \n",
-      "12       182  img_0008_0001.png, img_0009_0001.png, img_0012...           115   \n",
-      "13       179  img_0007_0001.png, img_0008_0001.png, img_0009...           117   \n",
-      "14       245  img_0007_0001.png, img_0008_0001.png, img_0009...           151   \n",
-      "15       226  img_0007_0001.png, img_0008_0001.png, img_0009...           163   \n",
-      "16       108  img_0005_0001.png, img_0007_0001.png, img_0008...            74   \n",
-      "17       143  img_0005_0001.png, img_0010_0001.png, img_0011...            65   \n",
-      "18        90  img_0005_0001.png, img_0008_0001.png, img_0009...            68   \n",
-      "19       299  img_0009_0001.png, img_0010_0001.png, img_0011...           192   \n",
-      "20       232  img_0007_0001.png, img_0008_0001.png, img_0009...           146   \n",
-      "21       198  img_0005_0001.png, img_0006_0001.png, img_0008...           128   \n",
-      "22       244  img_0007_0001.png, img_0007_0002.png, img_0008...           151   \n",
-      "23       222  img_0007_0001.png, img_0007_0002.png, img_0008...           150   \n",
-      "24       324  img_0007_0001.png, img_0007_0002.png, img_0008...           149   \n",
+      "0         47  img_0012_0001.png, img_0013_0001.png, img_0022...            40   \n",
+      "1         55  img_0014_0001.png, img_0015_0001.png, img_0024...            43   \n",
+      "2         53  img_0014_0001.png, img_0014_0002.png, img_0015...            53   \n",
+      "3         11  img_0003_0001.png, img_0004_0001.png, img_0006...            19   \n",
+      "4         50  img_0025_0001.png, img_0025_0002.png, img_0026...            43   \n",
+      "5          6  img_0003_0001.png, img_0004_0001.png, img_0012...            19   \n",
+      "6         27  img_0006_0001.png, img_0006_0002.png, img_0006...            20   \n",
+      "7         47  img_0013_0002.png, img_0020_0001.png, img_0020...            43   \n",
+      "8         52  img_0016_0001.png, img_0016_0002.png, img_0017...            47   \n",
+      "9         55  img_0013_0001.png, img_0014_0002.png, img_0021...            49   \n",
+      "10        79  img_0015_0002.png, img_0016_0002.png, img_0019...            73   \n",
+      "11        86  img_0015_0001.png, img_0016_0001.png, img_0017...            56   \n",
+      "12        42  img_0013_0001.png, img_0013_0002.png, img_0014...            42   \n",
+      "13        54  img_0014_0002.png, img_0018_0001.png, img_0018...            49   \n",
+      "14        48  img_0013_0001.png, img_0014_0002.png, img_0014...            54   \n",
+      "15        47  img_0014_0001.png, img_0017_0001.png, img_0018...            48   \n",
+      "16        18  img_0009_0001.png, img_0012_0001.png, img_0014...            15   \n",
+      "17         7  img_0011_0002.png, img_0024_0001.png, img_0031...             9   \n",
+      "18        12  img_0014_0001.png, img_0015_0001.png, img_0023...            18   \n",
+      "19        71  img_0020_0001.png, img_0021_0002.png, img_0021...            61   \n",
+      "20        59  img_0017_0002.png, img_0017_0003.png, img_0018...            57   \n",
+      "21        42  img_0013_0001.png, img_0014_0001.png, img_0014...            43   \n",
+      "22        67  img_0014_0001.png, img_0014_0002.png, img_0018...            53   \n",
+      "23        48  img_0011_0001.png, img_0013_0002.png, img_0014...            54   \n",
+      "24        86  img_0014_0001.png, img_0016_0001.png, img_0019...            55   \n",
       "\n",
       "                                        파일이_있는_페이지_목록  \n",
-      "0   0009, 0011, 0012, 0013, 0014, 0015, 0016, 0017...  \n",
-      "1   0010, 0012, 0013, 0014, 0015, 0016, 0017, 0018...  \n",
-      "2   0007, 0008, 0009, 0010, 0013, 0014, 0015, 0017...  \n",
-      "3   0003, 0004, 0005, 0006, 0007, 0008, 0009, 0010...  \n",
-      "4   0007, 0008, 0009, 0010, 0014, 0016, 0017, 0018...  \n",
-      "5   0003, 0004, 0005, 0007, 0008, 0009, 0010, 0011...  \n",
-      "6   0005, 0006, 0007, 0009, 0010, 0011, 0012, 0013...  \n",
-      "7   0011, 0012, 0013, 0015, 0016, 0019, 0020, 0021...  \n",
-      "8   0009, 0010, 0011, 0012, 0015, 0016, 0017, 0018...  \n",
-      "9   0007, 0008, 0009, 0010, 0012, 0013, 0014, 0015...  \n",
-      "10  0007, 0008, 0009, 0010, 0011, 0012, 0015, 0016...  \n",
-      "11  0007, 0008, 0009, 0011, 0015, 0016, 0017, 0018...  \n",
-      "12  0008, 0009, 0012, 0013, 0014, 0015, 0019, 0020...  \n",
-      "13  0007, 0008, 0009, 0010, 0014, 0016, 0017, 0018...  \n",
-      "14  0007, 0008, 0009, 0010, 0013, 0014, 0015, 0016...  \n",
-      "15  0007, 0008, 0009, 0010, 0013, 0014, 0015, 0016...  \n",
-      "16  0005, 0007, 0008, 0009, 0010, 0012, 0013, 0014...  \n",
-      "17  0005, 0010, 0011, 0013, 0014, 0016, 0017, 0018...  \n",
-      "18  0005, 0008, 0009, 0010, 0011, 0012, 0013, 0014...  \n",
-      "19  0009, 0010, 0011, 0012, 0013, 0016, 0019, 0020...  \n",
-      "20  0007, 0008, 0009, 0011, 0012, 0013, 0014, 0015...  \n",
-      "21  0005, 0006, 0008, 0011, 0012, 0013, 0014, 0015...  \n",
-      "22  0007, 0008, 0009, 0010, 0013, 0014, 0015, 0016...  \n",
-      "23  0007, 0008, 0009, 0010, 0011, 0013, 0014, 0015...  \n",
-      "24  0007, 0008, 0009, 0010, 0013, 0014, 0015, 0016...  \n"
+      "0   0012, 0013, 0022, 0023, 0024, 0038, 0039, 0056...  \n",
+      "1   0014, 0015, 0016, 0019, 0023, 0024, 0025, 0034...  \n",
+      "2   0014, 0015, 0018, 0021, 0029, 0032, 0034, 0040...  \n",
+      "3   0003, 0004, 0006, 0008, 0010, 0012, 0014, 0016...  \n",
+      "4   0025, 0026, 0027, 0028, 0030, 0031, 0037, 0040...  \n",
+      "5   0003, 0004, 0008, 0010, 0012, 0014, 0016, 0018...  \n",
+      "6   0006, 0007, 0009, 0011, 0012, 0015, 0017, 0018...  \n",
+      "7   0012, 0013, 0016, 0020, 0022, 0025, 0034, 0036...  \n",
+      "8   0016, 0017, 0019, 0020, 0021, 0023, 0026, 0027...  \n",
+      "9   0013, 0014, 0019, 0020, 0021, 0022, 0025, 0026...  \n",
+      "10  0015, 0016, 0018, 0019, 0021, 0023, 0024, 0029...  \n",
+      "11  0015, 0016, 0017, 0021, 0022, 0025, 0026, 0029...  \n",
+      "12  0012, 0013, 0014, 0015, 0019, 0020, 0029, 0033...  \n",
+      "13  0014, 0018, 0019, 0023, 0025, 0026, 0029, 0031...  \n",
+      "14  0013, 0014, 0017, 0020, 0022, 0024, 0026, 0028...  \n",
+      "15  0014, 0017, 0018, 0019, 0020, 0027, 0032, 0033...  \n",
+      "16  0009, 0012, 0014, 0019, 0023, 0037, 0057, 0058...  \n",
+      "17  0011, 0023, 0024, 0031, 0032, 0044, 0053, 0054...  \n",
+      "18  0014, 0015, 0018, 0023, 0029, 0033, 0037, 0038...  \n",
+      "19  0020, 0021, 0022, 0023, 0024, 0025, 0027, 0028...  \n",
+      "20  0012, 0016, 0017, 0018, 0022, 0023, 0028, 0029...  \n",
+      "21  0012, 0013, 0014, 0033, 0034, 0036, 0040, 0041...  \n",
+      "22  0014, 0018, 0019, 0020, 0021, 0022, 0023, 0025...  \n",
+      "23  0011, 0013, 0014, 0016, 0017, 0018, 0019, 0022...  \n",
+      "24  0014, 0016, 0019, 0020, 0026, 0029, 0030, 0032...  \n"
      ]
     }
    ],
@@ -256,12 +256,13 @@
     "\n",
     "before_file = 'crop_files_magazine_BEFORE.xlsx'\n",
     "after_file = 'crop_files_magazine_AFTER.xlsx'\n",
-    "df.to_excel(before_file, index=False)"
+    "# df.to_excel(before_file, index=False)\n",
+    "df.to_excel(after_file, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,18 +271,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "set(df['폴더명']) - set(df_before['폴더명'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총 25개 폴더에서 차이점을 발견했습니다.\n",
+      "\n",
+      "비교 결과:\n",
+      "       폴더명        상태  테이블_파일_수  이미지_파일_수        없어진_테이블_파일  \\\n",
+      "0   SS0068  일부_파일_누락        20       216                     \n",
+      "1   SS0067  일부_파일_누락        23       175                     \n",
+      "2   SS0094  일부_파일_누락        31       255                     \n",
+      "3   SS0146  일부_파일_누락         8        37                     \n",
+      "4   SS0115  일부_파일_누락        30       225                     \n",
+      "5   SS0147  일부_파일_누락        16        26                     \n",
+      "6   SS0139  일부_파일_누락         7        93                     \n",
+      "7   SS0073  일부_파일_누락        20       192                     \n",
+      "8   SS0074  일부_파일_누락        27       293  tb_0025_0001.png   \n",
+      "9   SS0089  일부_파일_누락        29       231                     \n",
+      "10  SS0088  일부_파일_누락        68       260                     \n",
+      "11  SS0086  일부_파일_누락        49       361                     \n",
+      "12  SS0065  일부_파일_누락        19       182                     \n",
+      "13  SS0091  일부_파일_누락        24       179                     \n",
+      "14  SS0096  일부_파일_누락        70       245                     \n",
+      "15  SS0097  일부_파일_누락        30       226                     \n",
+      "16  SS0142  일부_파일_누락         1       108                     \n",
+      "17  SS0143  일부_파일_누락         3       143                     \n",
+      "18  SS0144  일부_파일_누락         7        90                     \n",
+      "19  SS0102  일부_파일_누락        29       299                     \n",
+      "20  SS0084  일부_파일_누락        27       232                     \n",
+      "21  SS0070  일부_파일_누락        27       198                     \n",
+      "22  SS0079  일부_파일_누락        32       244                     \n",
+      "23  SS0082  일부_파일_누락        24       222                     \n",
+      "24  SS0076  일부_파일_누락        34       324                     \n",
+      "\n",
+      "                                           없어진_이미지_파일  없어진_페이지_수  \\\n",
+      "0   img_0009_0001.png, img_0011_0001.png, img_0014...         90   \n",
+      "1   img_0010_0001.png, img_0012_0001.png, img_0013...         59   \n",
+      "2   img_0007_0001.png, img_0008_0001.png, img_0009...        113   \n",
+      "3   img_0005_0001.png, img_0007_0001.png, img_0009...         26   \n",
+      "4   img_0007_0001.png, img_0008_0001.png, img_0009...         95   \n",
+      "5   img_0005_0001.png, img_0007_0001.png, img_0009...         20   \n",
+      "6   img_0005_0001.png, img_0009_0001.png, img_0010...         45   \n",
+      "7   img_0011_0001.png, img_0013_0001.png, img_0015...         86   \n",
+      "8   img_0009_0001.png, img_0009_0002.png, img_0010...        117   \n",
+      "9   img_0007_0001.png, img_0008_0001.png, img_0009...         94   \n",
+      "10  img_0007_0001.png, img_0008_0001.png, img_0009...         98   \n",
+      "11  img_0007_0001.png, img_0008_0001.png, img_0009...        111   \n",
+      "12  img_0008_0001.png, img_0009_0001.png, img_0012...         73   \n",
+      "13  img_0007_0001.png, img_0008_0001.png, img_0009...         68   \n",
+      "14  img_0007_0001.png, img_0008_0001.png, img_0009...         97   \n",
+      "15  img_0007_0001.png, img_0008_0001.png, img_0009...        115   \n",
+      "16  img_0005_0001.png, img_0007_0001.png, img_0008...         59   \n",
+      "17  img_0005_0001.png, img_0010_0001.png, img_0011...         56   \n",
+      "18  img_0005_0001.png, img_0008_0001.png, img_0009...         50   \n",
+      "19  img_0009_0001.png, img_0010_0001.png, img_0011...        131   \n",
+      "20  img_0007_0001.png, img_0008_0001.png, img_0009...         89   \n",
+      "21  img_0005_0001.png, img_0006_0001.png, img_0008...         85   \n",
+      "22  img_0007_0001.png, img_0007_0002.png, img_0008...         98   \n",
+      "23  img_0007_0001.png, img_0007_0002.png, img_0008...         96   \n",
+      "24  img_0007_0001.png, img_0007_0002.png, img_0008...         94   \n",
+      "\n",
+      "                                           없어진_페이지_목록  \\\n",
+      "0   0009, 0011, 0014, 0015, 0016, 0017, 0018, 0020...   \n",
+      "1   0010, 0012, 0013, 0017, 0018, 0020, 0021, 0022...   \n",
+      "2   0007, 0008, 0009, 0010, 0013, 0017, 0019, 0020...   \n",
+      "3   0005, 0007, 0009, 0011, 0013, 0015, 0017, 0019...   \n",
+      "4   0007, 0008, 0009, 0010, 0014, 0016, 0017, 0018...   \n",
+      "5   0005, 0007, 0009, 0011, 0013, 0017, 0019, 0021...   \n",
+      "6   0005, 0010, 0013, 0014, 0019, 0022, 0024, 0025...   \n",
+      "7   0011, 0015, 0019, 0021, 0023, 0024, 0026, 0027...   \n",
+      "8   0009, 0010, 0011, 0012, 0015, 0018, 0022, 0024...   \n",
+      "9   0007, 0008, 0009, 0010, 0012, 0015, 0016, 0018...   \n",
+      "10  0007, 0008, 0009, 0010, 0011, 0012, 0017, 0022...   \n",
+      "11  0007, 0008, 0009, 0011, 0018, 0019, 0027, 0028...   \n",
+      "12  0008, 0009, 0021, 0022, 0023, 0025, 0026, 0028...   \n",
+      "13  0007, 0008, 0009, 0010, 0016, 0017, 0020, 0021...   \n",
+      "14  0007, 0008, 0009, 0010, 0015, 0016, 0019, 0021...   \n",
+      "15  0007, 0008, 0009, 0010, 0013, 0015, 0016, 0021...   \n",
+      "16  0005, 0007, 0008, 0010, 0013, 0015, 0016, 0017...   \n",
+      "17  0005, 0010, 0013, 0014, 0016, 0017, 0018, 0019...   \n",
+      "18  0005, 0008, 0009, 0010, 0011, 0012, 0013, 0016...   \n",
+      "19  0009, 0010, 0011, 0012, 0013, 0016, 0019, 0026...   \n",
+      "20  0007, 0008, 0009, 0011, 0013, 0014, 0015, 0024...   \n",
+      "21  0005, 0006, 0008, 0011, 0015, 0016, 0017, 0018...   \n",
+      "22  0007, 0008, 0009, 0010, 0013, 0015, 0016, 0017...   \n",
+      "23  0007, 0008, 0009, 0010, 0015, 0020, 0021, 0024...   \n",
+      "24  0007, 0008, 0009, 0010, 0013, 0015, 0017, 0018...   \n",
+      "\n",
+      "                                            최종_페이지_목록  \n",
+      "0   0012, 0013, 0022, 0023, 0024, 0038, 0039, 0056...  \n",
+      "1   0014, 0015, 0016, 0019, 0023, 0024, 0025, 0034...  \n",
+      "2   0014, 0015, 0018, 0021, 0029, 0032, 0034, 0040...  \n",
+      "3   0003, 0004, 0006, 0008, 0010, 0012, 0014, 0016...  \n",
+      "4   0025, 0026, 0027, 0028, 0030, 0031, 0037, 0040...  \n",
+      "5   0003, 0004, 0008, 0010, 0012, 0014, 0016, 0018...  \n",
+      "6   0006, 0007, 0009, 0011, 0012, 0015, 0017, 0018...  \n",
+      "7   0012, 0013, 0016, 0020, 0022, 0025, 0034, 0036...  \n",
+      "8   0016, 0017, 0019, 0020, 0021, 0023, 0026, 0027...  \n",
+      "9   0013, 0014, 0019, 0020, 0021, 0022, 0025, 0026...  \n",
+      "10  0015, 0016, 0018, 0019, 0021, 0023, 0024, 0029...  \n",
+      "11  0015, 0016, 0017, 0021, 0022, 0025, 0026, 0029...  \n",
+      "12  0012, 0013, 0014, 0015, 0019, 0020, 0029, 0033...  \n",
+      "13  0014, 0018, 0019, 0023, 0025, 0026, 0029, 0031...  \n",
+      "14  0013, 0014, 0017, 0020, 0022, 0024, 0026, 0028...  \n",
+      "15  0014, 0017, 0018, 0019, 0020, 0027, 0032, 0033...  \n",
+      "16  0009, 0012, 0014, 0019, 0023, 0037, 0057, 0058...  \n",
+      "17  0011, 0023, 0024, 0031, 0032, 0044, 0053, 0054...  \n",
+      "18  0014, 0015, 0018, 0023, 0029, 0033, 0037, 0038...  \n",
+      "19  0020, 0021, 0022, 0023, 0024, 0025, 0027, 0028...  \n",
+      "20  0012, 0016, 0017, 0018, 0022, 0023, 0028, 0029...  \n",
+      "21  0012, 0013, 0014, 0033, 0034, 0036, 0040, 0041...  \n",
+      "22  0014, 0018, 0019, 0020, 0021, 0022, 0023, 0025...  \n",
+      "23  0011, 0013, 0014, 0016, 0017, 0018, 0019, 0022...  \n",
+      "24  0014, 0016, 0019, 0020, 0026, 0029, 0030, 0032...  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -364,8 +493,8 @@
     "    return results\n",
     "\n",
     "# 실행\n",
-    "before_file = 'crop_files_analysis.xlsx'\n",
-    "after_file = 'crop_files_analysis_AFTER.xlsx'\n",
+    "before_file = 'crop_files_magazine_BEFORE.xlsx'\n",
+    "after_file = 'crop_files_magazine_AFTER.xlsx'\n",
     "\n",
     "# 비교 분석 실행\n",
     "comparison_results = compare_analysis_files(before_file, after_file)\n",
@@ -379,7 +508,7 @@
     "print(df_comparison)\n",
     "\n",
     "# Excel 파일로 저장\n",
-    "df_comparison.to_excel('file_comparison_analysis.xlsx', index=False)\n",
+    "df_comparison.to_excel('file_comparison_magazine_analysis.xlsx', index=False)\n",
     "\n",
     "# 요약 통계\n",
     "# total_missing_table_files = sum(len(row['없어진_테이블_파일'].split(', ')) if row['없어진_테이블_파일'] else 0 for row in comparison_results)\n",
