--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -141,215 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "16it [00:00, 75.41it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 225933255 to SS0319 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0319/SS0319.json\n",
-      "Updated 239373741 to SS0320 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0320/SS0320.json\n",
-      "Updated 243228629 to SS0321 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0321/SS0321.json\n",
-      "Updated 250217022 to SS0323 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0323/SS0323.json\n",
-      "Updated 254160217 to SS0324 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0324/SS0324.json\n",
-      "Updated 255040895 to SS0325 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0325/SS0325.json\n",
-      "Updated 269377719 to SS0326 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0326/SS0326.json\n",
-      "Updated 271356222 to SS0327 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0327/SS0327.json\n",
-      "Updated 274972501 to SS0328 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0328/SS0328.json\n",
-      "Updated 285749760 to SS0331 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0331/SS0331.json\n",
-      "Updated 290155840 to SS0332 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0332/SS0332.json\n",
-      "Updated 291034529 to SS0333 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0333/SS0333.json\n",
-      "Updated 296642301 to SS0334 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0334/SS0334.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "35it [00:00, 84.03it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 303560744 to SS0335 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0335/SS0335.json\n",
-      "Updated 306937890 to SS0337 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0337/SS0337.json\n",
-      "Updated 308423311 to SS0340 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0340/SS0340.json\n",
-      "Updated 308908783 to SS0341 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0341/SS0341.json\n",
-      "Updated 310847711 to SS0343 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0343/SS0343.json\n",
-      "Updated 314844344 to SS0344 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0344/SS0344.json\n",
-      "Updated 316007919 to SS0346 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0346/SS0346.json\n",
-      "Updated 317504063 to SS0347 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0347/SS0347.json\n",
-      "Updated 320010955 to SS0348 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0348/SS0348.json\n",
-      "Updated 321086092 to SS0349 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0349/SS0349.json\n",
-      "Updated 321380624 to SS0350 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0350/SS0350.json\n",
-      "Updated 322004934 to SS0353 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0353/SS0353.json\n",
-      "Updated 322518213 to SS0354 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0354/SS0354.json\n",
-      "Updated 322662337 to SS0355 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0355/SS0355.json\n",
-      "Updated 324439303 to SS0357 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0357/SS0357.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "46it [00:25,  1.16it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 325172550 to SS0358 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0358/SS0358.json\n",
-      "Updated 325181387 to SS0359 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0359/SS0359.json\n",
-      "Updated 326377581 to SS0361 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0361/SS0361.json\n",
-      "Updated 327026008 to SS0362 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0362/SS0362.json\n",
-      "Updated 327117855 to SS0363 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0363/SS0363.json\n",
-      "Updated 328073930 to SS0364 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0364/SS0364.json\n",
-      "Updated 329367643 to SS0365 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0365/SS0365.json\n",
-      "Updated 329638002 to SS0366 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0366/SS0366.json\n",
-      "Updated 329639429 to SS0367 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0367/SS0367.json\n",
-      "Updated 332991681 to SS0371 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0371/SS0371.json\n",
-      "Updated 332991717 to SS0372 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0372/SS0372.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "66it [00:26,  3.03it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 334042532 to SS0373 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0373/SS0373.json\n",
-      "Updated 335874673 to SS0374 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0374/SS0374.json\n",
-      "Updated 336454547 to SS0375 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0375/SS0375.json\n",
-      "Updated 336675067 to SS0377 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0377/SS0377.json\n",
-      "Updated 337031493 to SS0378 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0378/SS0378.json\n",
-      "Updated 337618053 to SS0379 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0379/SS0379.json\n",
-      "Updated 337872889 to SS0381 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0381/SS0381.json\n",
-      "Updated 338224872 to SS0382 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0382/SS0382.json\n",
-      "Updated 338610005 to SS0383 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0383/SS0383.json\n",
-      "Updated 338622253 to SS0384 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0384/SS0384.json\n",
-      "Updated 338975267 to SS0385 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0385/SS0385.json\n",
-      "Updated 339516636 to SS0386 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0386/SS0386.json\n",
-      "Updated 340071510 to SS0388 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0388/SS0388.json\n",
-      "Updated 340089904 to SS0389 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0389/SS0389.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "74it [00:27,  3.55it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 341803977 to SS0392 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0392/SS0392.json\n",
-      "Updated 342066250 to SS0393 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0393/SS0393.json\n",
-      "Updated 342460463 to SS0394 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0394/SS0394.json\n",
-      "Updated 342761055 to SS0396 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0396/SS0396.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "86it [00:30,  4.14it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 342761174 to SS0397 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0397/SS0397.json\n",
-      "Updated 343001569 to SS0398 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0398/SS0398.json\n",
-      "Updated 343261092 to SS0399 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0399/SS0399.json\n",
-      "Updated 343630674 to SS0400 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0400/SS0400.json\n",
-      "Updated 343976144 to SS0401 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0401/SS0401.json\n",
-      "Updated 349719489 to SS0402 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0402/SS0402.json\n",
-      "Updated 349719549 to SS0403 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0403/SS0403.json\n",
-      "Updated 349857344 to SS0404 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0404/SS0404.json\n",
-      "Updated 349995715 to SS0405 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0405/SS0405.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "99it [00:31,  5.78it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 351876680 to SS0406 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0406/SS0406.json\n",
-      "Updated 353302817 to SS0407 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0407/SS0407.json\n",
-      "Updated 353738691 to SS0408 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0408/SS0408.json\n",
-      "Updated 356379574 to SS0409 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0409/SS0409.json\n",
-      "Updated 356500908 to SS0410 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0410/SS0410.json\n",
-      "Updated 357094267 to SS0411 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0411/SS0411.json\n",
-      "Updated 357314428 to SS0412 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0412/SS0412.json\n",
-      "Updated 359837661 to SS0417 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0417/SS0417.json\n",
-      "Updated 360314281 to SS0418 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0418/SS0418.json\n",
-      "Updated 360844783 to SS0419 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0419/SS0419.json\n",
-      "Updated 361239919 to SS0420 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0420/SS0420.json\n",
-      "Updated 361988234 to SS0421 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0421/SS0421.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "104it [00:39,  1.96it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 362874088 to SS0422 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0422/SS0422.json\n",
-      "Updated 364690338 to SS0423 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv5/SS0423/SS0423.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "106it [00:43,  2.43it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 346764368 to SS0424 in /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv3_4/SS0424/SS0424.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import shutil\n",
     "from tqdm import tqdm\n",
@@ -396,16 +190,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
+    "# from_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/mock_exam/test\" \n",
+    "from_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/tools/QueryModels.py'\n",
+    "to_path = \"yjmoon@oci004:/home/yjmoon/src\"\n",
+    "\n",
+    "\n",
     "# 업로드\n",
-    "for ss in file:\n",
-    "    print(ss)\n",
-    "    os.system(f\"scp -r /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/3C/Lv3_4/{ss} yjmoon@oci004:/home/yjmoon/FINAL/{ss}\")"
+    "os.system(f\"scp -r {from_path} {to_path}\")\n",
+    "# for ss in file:\n",
+    "    # print(ss)\n",
+    "    # os.system(f\"scp -r /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/3C/Lv3_4/{ss} yjmoon@oci004:/home/yjmoon/FINAL/{ss}\")"
    ]
   },
   {
