--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -58,14 +58,630 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>도서명</th>\n",
+       "      <th>출판일</th>\n",
+       "      <th>코퍼스 1분류</th>\n",
+       "      <th>코퍼스 2분류</th>\n",
+       "      <th>비고</th>\n",
+       "      <th>분류</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>관리번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SS0319</th>\n",
+       "      <td>9791163478782</td>\n",
+       "      <td>금융의 현재와 미래</td>\n",
+       "      <td>2020-01-03</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0320</th>\n",
+       "      <td>9788984059900</td>\n",
+       "      <td>요즘 금리 쉬운 경제</td>\n",
+       "      <td>2020-04-27</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0321</th>\n",
+       "      <td>9788960542570</td>\n",
+       "      <td>알기 쉬운 보험 세테크 100% 활용법</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>세무</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0322</th>\n",
+       "      <td>9788957614358</td>\n",
+       "      <td>공정거래 용어사전</td>\n",
+       "      <td>2020-08-10</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>용어</td>\n",
+       "      <td>Lv2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0323</th>\n",
+       "      <td>9791190820660</td>\n",
+       "      <td>1페이지 보험 정리의 기술</td>\n",
+       "      <td>2020-08-28</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0314</th>\n",
+       "      <td>9791193595244</td>\n",
+       "      <td>리스크 관리</td>\n",
+       "      <td>2025-02-01</td>\n",
+       "      <td>증권</td>\n",
+       "      <td>실무</td>\n",
+       "      <td>리스크관리</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0315</th>\n",
+       "      <td>9791194530152</td>\n",
+       "      <td>환율의 대전환</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0316</th>\n",
+       "      <td>9791157848140</td>\n",
+       "      <td>빅 사이클</td>\n",
+       "      <td>2025-06-03</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0317</th>\n",
+       "      <td>9791174042057</td>\n",
+       "      <td>2025 해커스 CFP 사례형 핵심문제집</td>\n",
+       "      <td>2025-07-24</td>\n",
+       "      <td>증권</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>CFP</td>\n",
+       "      <td>Lv5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0318</th>\n",
+       "      <td>9791174042040</td>\n",
+       "      <td>2025 해커스 CFP 지식형 핵심문제집</td>\n",
+       "      <td>2025-07-21</td>\n",
+       "      <td>증권</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>CFP</td>\n",
+       "      <td>Lv5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>405 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ISBN                     도서명        출판일 코퍼스 1분류 코퍼스 2분류  \\\n",
+       "관리번호                                                                       \n",
+       "SS0319  9791163478782              금융의 현재와 미래 2020-01-03      금융      기초   \n",
+       "SS0320  9788984059900             요즘 금리 쉬운 경제 2020-04-27      금융      기초   \n",
+       "SS0321  9788960542570   알기 쉬운 보험 세테크 100% 활용법 2020-06-23      보험      기초   \n",
+       "SS0322  9788957614358               공정거래 용어사전 2020-08-10      금융      기초   \n",
+       "SS0323  9791190820660          1페이지 보험 정리의 기술 2020-08-28      보험      기초   \n",
+       "...               ...                     ...        ...     ...     ...   \n",
+       "SS0314  9791193595244                  리스크 관리 2025-02-01      증권      실무   \n",
+       "SS0315  9791194530152                 환율의 대전환 2025-03-01      금융      기초   \n",
+       "SS0316  9791157848140                   빅 사이클 2025-06-03      금융      기초   \n",
+       "SS0317  9791174042057  2025 해커스 CFP 사례형 핵심문제집 2025-07-24      증권     수험서   \n",
+       "SS0318  9791174042040  2025 해커스 CFP 지식형 핵심문제집 2025-07-21      증권     수험서   \n",
+       "\n",
+       "           비고     분류  \n",
+       "관리번호                  \n",
+       "SS0319     시사  Lv3/4  \n",
+       "SS0320     시사  Lv3/4  \n",
+       "SS0321     세무  Lv3/4  \n",
+       "SS0322     용어    Lv2  \n",
+       "SS0323     시사  Lv3/4  \n",
+       "...       ...    ...  \n",
+       "SS0314  리스크관리  Lv3/4  \n",
+       "SS0315     시사  Lv3/4  \n",
+       "SS0316     시사  Lv3/4  \n",
+       "SS0317    CFP    Lv5  \n",
+       "SS0318    CFP    Lv5  \n",
+       "\n",
+       "[405 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tools.ProcessFiles as pf\n",
+    "import pandas as pd\n",
+    "excel = pd.concat([pf.get_excel_data(1), pf.get_excel_data(2), pf.get_excel_data(3)]) # i차 분석\n",
+    "excel"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import tools.ProcessFiles as pf\n",
-    "# excel = pf.get_excel_data(3) # i차 분석\n",
-    "# excel"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SS0001',\n",
+       " 'SS0002',\n",
+       " 'SS0003',\n",
+       " 'SS0004',\n",
+       " 'SS0005',\n",
+       " 'SS0006',\n",
+       " 'SS0007',\n",
+       " 'SS0008',\n",
+       " 'SS0009',\n",
+       " 'SS0010',\n",
+       " 'SS0011',\n",
+       " 'SS0012',\n",
+       " 'SS0013',\n",
+       " 'SS0014',\n",
+       " 'SS0015',\n",
+       " 'SS0016',\n",
+       " 'SS0017',\n",
+       " 'SS0018',\n",
+       " 'SS0019',\n",
+       " 'SS0020',\n",
+       " 'SS0021',\n",
+       " 'SS0022',\n",
+       " 'SS0023',\n",
+       " 'SS0024',\n",
+       " 'SS0025',\n",
+       " 'SS0026',\n",
+       " 'SS0027',\n",
+       " 'SS0028',\n",
+       " 'SS0029',\n",
+       " 'SS0030',\n",
+       " 'SS0031',\n",
+       " 'SS0032',\n",
+       " 'SS0033',\n",
+       " 'SS0034',\n",
+       " 'SS0035',\n",
+       " 'SS0036',\n",
+       " 'SS0037',\n",
+       " 'SS0038',\n",
+       " 'SS0039',\n",
+       " 'SS0040',\n",
+       " 'SS0041',\n",
+       " 'SS0042',\n",
+       " 'SS0043',\n",
+       " 'SS0044',\n",
+       " 'SS0045',\n",
+       " 'SS0046',\n",
+       " 'SS0047',\n",
+       " 'SS0048',\n",
+       " 'SS0049',\n",
+       " 'SS0050',\n",
+       " 'SS0051',\n",
+       " 'SS0052',\n",
+       " 'SS0053',\n",
+       " 'SS0054',\n",
+       " 'SS0055',\n",
+       " 'SS0056',\n",
+       " 'SS0057',\n",
+       " 'SS0058',\n",
+       " 'SS0059',\n",
+       " 'SS0060',\n",
+       " 'SS0061',\n",
+       " 'SS0062',\n",
+       " 'SS0063',\n",
+       " 'SS0064',\n",
+       " 'SS0066',\n",
+       " 'SS0069',\n",
+       " 'SS0071',\n",
+       " 'SS0072',\n",
+       " 'SS0075',\n",
+       " 'SS0077',\n",
+       " 'SS0078',\n",
+       " 'SS0080',\n",
+       " 'SS0081',\n",
+       " 'SS0083',\n",
+       " 'SS0085',\n",
+       " 'SS0087',\n",
+       " 'SS0090',\n",
+       " 'SS0092',\n",
+       " 'SS0093',\n",
+       " 'SS0095',\n",
+       " 'SS0098',\n",
+       " 'SS0099',\n",
+       " 'SS0100',\n",
+       " 'SS0101',\n",
+       " 'SS0103',\n",
+       " 'SS0104',\n",
+       " 'SS0105',\n",
+       " 'SS0106',\n",
+       " 'SS0107',\n",
+       " 'SS0108',\n",
+       " 'SS0109',\n",
+       " 'SS0110',\n",
+       " 'SS0111',\n",
+       " 'SS0112',\n",
+       " 'SS0113',\n",
+       " 'SS0114',\n",
+       " 'SS0116',\n",
+       " 'SS0117',\n",
+       " 'SS0118',\n",
+       " 'SS0119',\n",
+       " 'SS0120',\n",
+       " 'SS0121',\n",
+       " 'SS0122',\n",
+       " 'SS0123',\n",
+       " 'SS0124',\n",
+       " 'SS0125',\n",
+       " 'SS0126',\n",
+       " 'SS0127',\n",
+       " 'SS0128',\n",
+       " 'SS0129',\n",
+       " 'SS0130',\n",
+       " 'SS0131',\n",
+       " 'SS0132',\n",
+       " 'SS0133',\n",
+       " 'SS0134',\n",
+       " 'SS0135',\n",
+       " 'SS0136',\n",
+       " 'SS0137',\n",
+       " 'SS0138',\n",
+       " 'SS0140',\n",
+       " 'SS0141',\n",
+       " 'SS0145',\n",
+       " 'SS0146',\n",
+       " 'SS0147',\n",
+       " 'SS0148',\n",
+       " 'SS0149',\n",
+       " 'SS0150',\n",
+       " 'SS0151',\n",
+       " 'SS0152',\n",
+       " 'SS0153',\n",
+       " 'SS0154',\n",
+       " 'SS0155',\n",
+       " 'SS0156',\n",
+       " 'SS0157',\n",
+       " 'SS0158',\n",
+       " 'SS0159',\n",
+       " 'SS0160',\n",
+       " 'SS0161',\n",
+       " 'SS0162',\n",
+       " 'SS0163',\n",
+       " 'SS0164',\n",
+       " 'SS0165',\n",
+       " 'SS0166',\n",
+       " 'SS0167',\n",
+       " 'SS0168',\n",
+       " 'SS0169',\n",
+       " 'SS0170',\n",
+       " 'SS0171',\n",
+       " 'SS0172',\n",
+       " 'SS0173',\n",
+       " 'SS0174',\n",
+       " 'SS0175',\n",
+       " 'SS0176',\n",
+       " 'SS0177',\n",
+       " 'SS0178',\n",
+       " 'SS0179',\n",
+       " 'SS0180',\n",
+       " 'SS0181',\n",
+       " 'SS0182',\n",
+       " 'SS0183',\n",
+       " 'SS0184',\n",
+       " 'SS0185',\n",
+       " 'SS0186',\n",
+       " 'SS0187',\n",
+       " 'SS0188',\n",
+       " 'SS0189',\n",
+       " 'SS0190',\n",
+       " 'SS0191',\n",
+       " 'SS0192',\n",
+       " 'SS0193',\n",
+       " 'SS0194',\n",
+       " 'SS0195',\n",
+       " 'SS0196',\n",
+       " 'SS0197',\n",
+       " 'SS0198',\n",
+       " 'SS0199',\n",
+       " 'SS0200',\n",
+       " 'SS0201',\n",
+       " 'SS0202',\n",
+       " 'SS0203',\n",
+       " 'SS0204',\n",
+       " 'SS0205',\n",
+       " 'SS0206',\n",
+       " 'SS0207',\n",
+       " 'SS0208',\n",
+       " 'SS0209',\n",
+       " 'SS0210',\n",
+       " 'SS0211',\n",
+       " 'SS0212',\n",
+       " 'SS0213',\n",
+       " 'SS0214',\n",
+       " 'SS0215',\n",
+       " 'SS0216',\n",
+       " 'SS0217',\n",
+       " 'SS0218',\n",
+       " 'SS0219',\n",
+       " 'SS0220',\n",
+       " 'SS0221',\n",
+       " 'SS0222',\n",
+       " 'SS0223',\n",
+       " 'SS0224',\n",
+       " 'SS0225',\n",
+       " 'SS0226',\n",
+       " 'SS0227',\n",
+       " 'SS0228',\n",
+       " 'SS0229',\n",
+       " 'SS0230',\n",
+       " 'SS0231',\n",
+       " 'SS0232',\n",
+       " 'SS0233',\n",
+       " 'SS0234',\n",
+       " 'SS0235',\n",
+       " 'SS0236',\n",
+       " 'SS0237',\n",
+       " 'SS0238',\n",
+       " 'SS0239',\n",
+       " 'SS0240',\n",
+       " 'SS0241',\n",
+       " 'SS0242',\n",
+       " 'SS0243',\n",
+       " 'SS0244',\n",
+       " 'SS0245',\n",
+       " 'SS0246',\n",
+       " 'SS0247',\n",
+       " 'SS0248',\n",
+       " 'SS0249',\n",
+       " 'SS0250',\n",
+       " 'SS0251',\n",
+       " 'SS0252',\n",
+       " 'SS0253',\n",
+       " 'SS0254',\n",
+       " 'SS0255',\n",
+       " 'SS0256',\n",
+       " 'SS0257',\n",
+       " 'SS0258',\n",
+       " 'SS0259',\n",
+       " 'SS0260',\n",
+       " 'SS0261',\n",
+       " 'SS0262',\n",
+       " 'SS0263',\n",
+       " 'SS0264',\n",
+       " 'SS0265',\n",
+       " 'SS0266',\n",
+       " 'SS0267',\n",
+       " 'SS0268',\n",
+       " 'SS0269',\n",
+       " 'SS0270',\n",
+       " 'SS0271',\n",
+       " 'SS0272',\n",
+       " 'SS0273',\n",
+       " 'SS0274',\n",
+       " 'SS0275',\n",
+       " 'SS0276',\n",
+       " 'SS0277',\n",
+       " 'SS0278',\n",
+       " 'SS0279',\n",
+       " 'SS0280',\n",
+       " 'SS0281',\n",
+       " 'SS0282',\n",
+       " 'SS0283',\n",
+       " 'SS0284',\n",
+       " 'SS0285',\n",
+       " 'SS0286',\n",
+       " 'SS0287',\n",
+       " 'SS0288',\n",
+       " 'SS0289',\n",
+       " 'SS0290',\n",
+       " 'SS0291',\n",
+       " 'SS0292',\n",
+       " 'SS0293',\n",
+       " 'SS0294',\n",
+       " 'SS0295',\n",
+       " 'SS0296',\n",
+       " 'SS0297',\n",
+       " 'SS0298',\n",
+       " 'SS0299',\n",
+       " 'SS0300',\n",
+       " 'SS03011',\n",
+       " 'SS03012',\n",
+       " 'SS03013',\n",
+       " 'SS03014',\n",
+       " 'SS03015',\n",
+       " 'SS0302',\n",
+       " 'SS0303',\n",
+       " 'SS0304',\n",
+       " 'SS0305',\n",
+       " 'SS0306',\n",
+       " 'SS0307',\n",
+       " 'SS0308',\n",
+       " 'SS0309',\n",
+       " 'SS0310',\n",
+       " 'SS0311',\n",
+       " 'SS0312',\n",
+       " 'SS0313',\n",
+       " 'SS0314',\n",
+       " 'SS0315',\n",
+       " 'SS0316',\n",
+       " 'SS0317',\n",
+       " 'SS0318',\n",
+       " 'SS0319',\n",
+       " 'SS0320',\n",
+       " 'SS0321',\n",
+       " 'SS0322',\n",
+       " 'SS0323',\n",
+       " 'SS0324',\n",
+       " 'SS0325',\n",
+       " 'SS0326',\n",
+       " 'SS0327',\n",
+       " 'SS0328',\n",
+       " 'SS0329',\n",
+       " 'SS0330',\n",
+       " 'SS0331',\n",
+       " 'SS0332',\n",
+       " 'SS0333',\n",
+       " 'SS0334',\n",
+       " 'SS0335',\n",
+       " 'SS0336',\n",
+       " 'SS0337',\n",
+       " 'SS0338',\n",
+       " 'SS0339',\n",
+       " 'SS0340',\n",
+       " 'SS0341',\n",
+       " 'SS0342',\n",
+       " 'SS0343',\n",
+       " 'SS0344',\n",
+       " 'SS0345',\n",
+       " 'SS0346',\n",
+       " 'SS0347',\n",
+       " 'SS0348',\n",
+       " 'SS0349',\n",
+       " 'SS0350',\n",
+       " 'SS0351',\n",
+       " 'SS0352',\n",
+       " 'SS0353',\n",
+       " 'SS0354',\n",
+       " 'SS0355',\n",
+       " 'SS0356',\n",
+       " 'SS0357',\n",
+       " 'SS0358',\n",
+       " 'SS0359',\n",
+       " 'SS0360',\n",
+       " 'SS0361',\n",
+       " 'SS0362',\n",
+       " 'SS0363',\n",
+       " 'SS0364',\n",
+       " 'SS0365',\n",
+       " 'SS0366',\n",
+       " 'SS0367',\n",
+       " 'SS0368',\n",
+       " 'SS0369',\n",
+       " 'SS0370',\n",
+       " 'SS0371',\n",
+       " 'SS0372',\n",
+       " 'SS0373',\n",
+       " 'SS0374',\n",
+       " 'SS0375',\n",
+       " 'SS0376',\n",
+       " 'SS0377',\n",
+       " 'SS0378',\n",
+       " 'SS0379',\n",
+       " 'SS0380',\n",
+       " 'SS0381',\n",
+       " 'SS0382',\n",
+       " 'SS0383',\n",
+       " 'SS0384',\n",
+       " 'SS0385',\n",
+       " 'SS0386',\n",
+       " 'SS0387',\n",
+       " 'SS0388',\n",
+       " 'SS0389',\n",
+       " 'SS0390',\n",
+       " 'SS0391',\n",
+       " 'SS0392',\n",
+       " 'SS0393',\n",
+       " 'SS0394',\n",
+       " 'SS0395',\n",
+       " 'SS0396',\n",
+       " 'SS0397',\n",
+       " 'SS0398',\n",
+       " 'SS0399',\n",
+       " 'SS0400',\n",
+       " 'SS0401',\n",
+       " 'SS0402',\n",
+       " 'SS0403',\n",
+       " 'SS0404',\n",
+       " 'SS0405',\n",
+       " 'SS0406',\n",
+       " 'SS0407',\n",
+       " 'SS0408',\n",
+       " 'SS0409',\n",
+       " 'SS0410',\n",
+       " 'SS0411',\n",
+       " 'SS0412',\n",
+       " 'SS0413',\n",
+       " 'SS0414',\n",
+       " 'SS0415',\n",
+       " 'SS0416',\n",
+       " 'SS0417',\n",
+       " 'SS0418',\n",
+       " 'SS0419',\n",
+       " 'SS0420',\n",
+       " 'SS0421',\n",
+       " 'SS0422',\n",
+       " 'SS0423',\n",
+       " 'SS0424']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -76,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,20 +806,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
