[251103] 파일정리 - Lv2 pdf_page 추가

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -971,6 +971,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lv2 pdf_page 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "base_path = \"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar\"\n",
+    "analysis = {1:'1차 분석', 2:'2차 분석', 3: '3차 분석'}\n",
+    "buy = {1:'1차 구매', 2:'2차 구매', 3: '3차 구매'}\n",
+    "i = 3\n",
+    "\n",
+    "excel_analy = pd.read_excel(os.path.join(base_path, 'book_list_ALL.xlsx'), sheet_name=analysis[i], header=3, engine='openpyxl')[['관리번호', 'ISBN', '도서명', '분류']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv = excel_analy[excel_analy['관리번호'] == tn]['분류'].tolist()[0]\n",
+    "lv\n",
+    "# print(lv == 'Lv2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed version - using Python file operations instead of sed\n",
+    "import shutil\n",
+    "from tqdm import tqdm\n",
+    "import fitz\n",
+    "\n",
+    "dpi = 300\n",
+    "mat = fitz.Matrix(dpi / 150, dpi / 150)\n",
+    "\n",
+    "# for tn, isbn, lv in tqdm(zip(excel_analy['관리번호'], excel_analy['ISBN'], excel_analy['분류'])):\n",
+    "for tn in tqdm(excel_analy['관리번호']):\n",
+    "   # if '/' in lv: \n",
+    "   #    lv = lv.replace(\"/\", '_')\n",
+    "   \n",
+    "   # if 'Lv' not in lv:\n",
+    "   #    continue\n",
+    "   lv = excel_analy[excel_analy['관리번호'] == tn]['분류'].tolist()[0]\n",
+    "   # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
+    "   if lv == 'Lv2':\n",
+    "      os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2 && mkdir {tn} && mv {tn}*.json {tn}/ && cd {tn} && mkdir pdf_page\")\n",
+    "      # pdf_page 만들기\n",
+    "      pdf_path = f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv1/{tn}.pdf\"\n",
+    "      doc = fitz.open(pdf_path)\n",
+    "      for p, page in enumerate(doc):\n",
+    "         img = page.get_pixmap(matrix=mat)\n",
+    "         img.save(f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2/{tn}/pdf_page/{tn}_{p+1:04d}.png\")\n",
+    "      \n",
+    "      # break\n",
+    "\n",
+    "   # SS0041 - SS0045 사이에서 MuPDF error: syntax error: invalid key in dict"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
