--- a/test.ipynb
+++ b/test.ipynb
@@ -269,6 +269,7 @@
     "from datetime import datetime\n",
     "\n",
     "BASE_DIR = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data'\n",
+    "PROCESSED_DIR = os.path.join(BASE_DIR, '2_subdomain')\n",
     "MOCK_DIR = os.path.join(BASE_DIR, '3_multiple_mock')\n",
     "EXAM_DIR = os.path.join(BASE_DIR, '4_multiple_exam')\n",
     "\n",
@@ -398,7 +399,10 @@
     "    # with open(f'evaluation/eval_data/mock_exam/1st/{subject}_mock_exam.json', 'r', encoding='utf-8') as f:\n",
     "        # data = json.load(f)\n",
     "\n",
-    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/1_filter/multiple.json', 'r', encoding='utf-8') as f:\n",
+    "# file_name = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/1_filter/multiple.json'\n",
+    "file_name = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json'\n",
+    "\n",
+    "with open(file_name, 'r', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "if True:\n",
@@ -434,6 +438,399 @@
    "outputs": [],
    "source": [
     "invalid_options"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## short/essay인 객관식 조정하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, json\n",
+    "\n",
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/essay_subdomain_classified_ALL.json', 'r', encoding='utf-8') as f:\n",
+    "    essay = json.load(f)\n",
+    "\n",
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/short_subdomain_classified_ALL.json', 'r', encoding='utf-8') as f:\n",
+    "    short = json.load(f)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_multiple = []\n",
+    "\n",
+    "# for e in essay:\n",
+    "#     if isinstance(e['options'], list):\n",
+    "#         to_multiple.append(e)\n",
+    "# print(len(to_multiple))\n",
+    "\n",
+    "new_short = []\n",
+    "for s in short:\n",
+    "    if isinstance(s['options'], list):\n",
+    "        to_multiple.append(s)\n",
+    "    else:\n",
+    "        new_short.append(s)\n",
+    "print(len(to_multiple), len(short), len(new_short))\n",
+    "# to_multiple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/short_subdomain_classified_ALL.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(new_short, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_shortans_classified_ALL.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(to_multiple, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 원본에 옮기기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, time\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "file_list = []\n",
+    "\n",
+    "for t in tqdm(to_multiple):\n",
+    "    file_id = t.get('file_id')\n",
+    "    file_list.append(file_id)\n",
+    "    # print(file_id)\n",
+    "    tag = t.get('tag')\n",
+    "    time.sleep(0.5)\n",
+    "        \n",
+    "    file_path = os.popen(f\"find /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FINAL -type f -name '{file_id}_v2.json'\").read().strip()\n",
+    "    if file_path == \"\":\n",
+    "        file_path = os.popen(f\"find /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FINAL -type f -name '{file_id}.json'\").read().strip()\n",
+    "    # print(file_path)\n",
+    "\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    \n",
+    "    contents = data['contents']\n",
+    "\n",
+    "    for d in contents:\n",
+    "        if d.get('page') == tag.split('_')[1]:\n",
+    "            add_info = d.get('add_info')\n",
+    "            for info in add_info:\n",
+    "                if info.get('tag') == tag:\n",
+    "                    if info.get('description').get('question') == t.get('question'):\n",
+    "                        pass\n",
+    "                    else:\n",
+    "                        # print(\"질문 다름\")\n",
+    "                        info['description']['question'] = t.get('question')\n",
+    "\n",
+    "                    if info.get('description').get('answer') == t.get('answer'):\n",
+    "                        pass\n",
+    "                    else:\n",
+    "                        # print(\"답 다름\")\n",
+    "                        info['description']['answer'] = t.get('answer')\n",
+    "                    if info.get('description').get('options') == t.get('options'):\n",
+    "                        pass\n",
+    "                    else:\n",
+    "                        # print(\"옵션 다름\")\n",
+    "                        info['description']['options'] = t.get('options')\n",
+    "    if file_path.endswith(\"_v2.json\"):\n",
+    "        with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(data, f, ensure_ascii=False, indent=4)\n",
+    "    else:\n",
+    "        with open(file_path.replace(\".json\", \"_v2.json\"), 'w', encoding='utf-8') as f:\n",
+    "            json.dump(data, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sorted(list(set(file_list)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## multiple 실패한거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import os, json\n",
+    "\n",
+    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'r', encoding='utf-8') as f:\n",
+    "#     multiple = json.load(f)\n",
+    "\n",
+    "# # with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-fail_response.json', 'r', encoding='utf-8') as f:\n",
+    "# #     multiple_fail = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for q in multiple:\n",
+    "#     # print(q)\n",
+    "#     if q['domain'] == '분류실패':\n",
+    "#         for m in multiple_fail:\n",
+    "#             if (m['file_id'] == q['file_id']) and (m['tag'] == q['tag']):\n",
+    "#                 q['domain'] = m['domain']\n",
+    "#                 q['subdomain'] = m['subdomain']\n",
+    "#                 q['classification_reason'] = m['classification_reason']\n",
+    "#                 q['is_calculation'] = m['is_calculation']\n",
+    "#                 # break\n",
+    "#     # break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'w', encoding='utf-8') as f:\n",
+    "#     json.dump(multiple, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-fail_response_fail_again.json', 'r', encoding='utf-8') as f:\n",
+    "#     multiple_fail_again = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for q in multiple:\n",
+    "#     if q['domain'] == '':\n",
+    "#         for m in multiple_fail_again:\n",
+    "#             file_id = m['qna_id'].split('_')[0]\n",
+    "#             tag = m['qna_id'].replace(file_id+'_', '')\n",
+    "#             if (file_id == q['file_id']) and (tag == q['tag']):\n",
+    "#                 q['domain'] = m['domain']\n",
+    "#                 q['subdomain'] = m['subdomain']\n",
+    "#                 q['classification_reason'] = m['reason']\n",
+    "#                 q['is_calculation'] = m['is_calculation']\n",
+    "#                 # print(q)\n",
+    "#                 # break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 통계"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, json\n",
+    "from tools.evaluation import qna_subdomain_classifier\n",
+    "\n",
+    "\n",
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'r', encoding='utf-8') as f:\n",
+    "    multiple = json.load(f)\n",
+    "\n",
+    "classifier = qna_subdomain_classifier.QnASubdomainClassifier()\n",
+    "classifier.save_statistics(multiple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for m in multiple:\n",
+    "    if m['subdomain'].count('-') >= 1:\n",
+    "        # print(m)\n",
+    "        # break\n",
+    "        m['subdomain'] = m['subdomain'].split('-')[0].strip()\n",
+    "        # print(m)\n",
+    "        # break\n",
+    "    elif m['subdomain'].count('.') >= 1:\n",
+    "        m['subdomain'] = m['subdomain'].split('.')[1].strip()\n",
+    "        \n",
+    "\n",
+    "classifier.save_statistics(multiple)\n",
+    "    # print(\"없는데?\", m['subdomain'])\n",
+    "\n",
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(multiple, f, ensure_ascii=False, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'r', encoding='utf-8') as f:\n",
+    "    multiple = json.load(f)\n",
+    "\n",
+    "for m in multiple:\n",
+    "    m['domain'] = \"\"\n",
+    "    m['subdomain'] = \"\"\n",
+    "    m['classification_reason'] = \"\"\n",
+    "    m['is_calculation'] = False\n",
+    "\n",
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(multiple, f, ensure_ascii=False, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 객관식 문제 변형"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, json\n",
+    "\n",
+    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple.json', 'r', encoding='utf-8') as f:\n",
+    "    multiple = json.load(f)\n",
+    "\n",
+    "pick_right = []\n",
+    "pick_wrong = []\n",
+    "pick_abcd = []\n",
+    "\n",
+    "len(multiple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "# 리스트를 순회하면서 remove()를 하면 인덱스가 꼬이므로, 새로 분류하는 방식으로 변경\n",
+    "remaining = []\n",
+    "for m in multiple:\n",
+    "    question = m['question']\n",
+    "    \n",
+    "    # 3. ㄱ/ㄴ/ㄷ/ㄹ 등에서 옳은 것을 모두 고르는 문제 (다중 선택)\n",
+    "    # 종결어미 '다.' 제외: 줄바꿈, 문장 시작, 또는 공백 후에 나오고 뒤에 공백이 아닌 문자가 오는 경우만 매칭\n",
+    "    # 가나다라마바사아자차카타파하까지 포함 (바, 사, 아 등도 포함)\n",
+    "    if ('옳은 것을 모두 고른 것은?' in question) or \\\n",
+    "         ('옳은 것을 모두 고르면?' in question) or \\\n",
+    "         ('옳은 것을 모두 고른 것은' in question) or \\\n",
+    "         ('옳은 것을 모두' in question and '?' in question) or \\\n",
+    "         ('모두 고른 것은?' in question) or \\\n",
+    "         ('모두 고르면?' in question) or \\\n",
+    "         ('모두 고른 것은' in question) or \\\n",
+    "         ('모두 묶인 것은?' in question) or \\\n",
+    "         (re.search(r'[ㄱㄴㄷㄹ][\\.]', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
+    "         (re.search(r'(?:^|\\n| )[가나다라마바사아자차카타파하]\\.(?!\\s|$)', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
+    "         (re.search(r'[㉠㉡㉢㉣㉤]', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
+    "         (re.search(r'[ⓐⓑⓒⓓⓔ]', question) and ('모두 고른' in question or '모두 묶인' in question)):\n",
+    "        pick_abcd.append(m)\n",
+    "    # 1. 옳은 것을 고르는 문제 (단일 선택)\n",
+    "    # if ('옳은' in question) or ('옳게' in question) or ('해당하는' in question) or ('적절한' in question) or ('적절하게' in question) or ('바르게' in question) or ('올바른' in question) or ('가장 깊은' in question) or ('가장 타당한' in question) or ('관련 있는' in question):\n",
+    "    #     pick_right.append(m)\n",
+    "    # 2. 옳지 않은 것을 고르는 문제 (단일 선택)\n",
+    "    elif ('않은' in question) or ('못한' in question) or ('없는' in question) or ('거리가 먼' in question) or ('아닌' in question) or ('아니하는 것' in question) or ('않는' in question) or (\"않게\" in question) or ('잘못된' in question) or ('틀린' in question) or ('다른' in question) or ('무관한' in question) or ('가장 먼' in question) or ('어려운' in question):\n",
+    "        pick_wrong.append(m)\n",
+    "    else:\n",
+    "        # 분류되지 않은 항목\n",
+    "        # remaining.append(m)\n",
+    "        pick_right.append(m)\n",
+    "\n",
+    "# 분류 결과 확인\n",
+    "print(f\"전체: {len(multiple)}\")\n",
+    "print(f\"옳은 것은? (단일 선택): {len(pick_right)}\")\n",
+    "print(f\"옳지 않은 것은? (단일 선택): {len(pick_wrong)}\")\n",
+    "print(f\"옳은 것을 모두 고른 것은? (다중 선택): {len(pick_abcd)}\")\n",
+    "print(f\"미분류: {len(remaining)}\")\n",
+    "print(f\"합계: {len(pick_right) + len(pick_wrong) + len(pick_abcd) + len(remaining)}\")\n",
+    "\n",
+    "len(remaining), len(pick_right), len(pick_wrong), len(pick_abcd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for r in remaining:\n",
+    "#     print(r['question'])\n",
+    "#     print(\"---------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pick_abcd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 옳지 않은 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pick_wrong"
    ]
   },
   {
